[project]
name = "reflex-docker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "celsius narhwal", email = "hello@celsiusnarhwal.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "reflex>=0.6.6.post2",
]

[project.scripts]
reflex-docker = "reflex_docker:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
